# libarmvm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  doxygen.conf
arm-vm/: armvm.c  armvm_config.c  armvm_config.h
cmake/: cli_version.c.in  cli_version.h.in  gitversion.cmake  lib_version.c.in  lib_version.h.in
example_programs/: .gitignore
example_programs/arithmetic/: Makefile  main.c  stm32f07.ld
example_programs/endless_loop1/: Makefile  main.c
example_programs/endless_loop2/: main.c
include/: armvm.h
include/armvm/: types.h  utils.h
lib/: libarmvm.c  libarmvm.h  libarmvm_ci.c  libarmvm_ci.h  libarmvm_isa.c  libarmvm_isa.h  libarmvm_memory.c  libarmvm_memory.h  libarmvm_peripherals.c  libarmvm_peripherals.h  libarmvm_registers.c  libarmvm_registers.h
lib/isa/: armv6_m.c  armv6_m.h
lib/utils/: isa_to_string.c  string_to_isa.c
test/: CMakeLists.txt  test_header.h
test/types/: CMakeLists.txt  test_type.c
test/utils/: CMakeLists.txt  test_isa_to_string.c  test_string_to_isa.c
